# callgraph-ui

./: .gitignore.txt  ARCH.md  LICENSE  README.md  TODO.md  app.py  ladybugdb.py  pyproject.toml  requirements.txt
backend/: generate_large_data.py  loader_kuzu.py  query_api.py  session_manager.py
callgraph/: __init__.py  cli.py
callgraph/config/: settings.py
callgraph/loader/: db.py  load_sample.py  writer.py
callgraph/model/: callgraph.py
callgraph/parser/: clang_parser.py
callgraph/queries/: api.py
callgraph/schema/: ddl.py
callgraph/ui/: app.py
callgraph/ui/components/: __init__.py  configuration.py  depth_table.py  results_table.py  search_bar.py
callgraph/utils/: files.py  log.py
callgraph/validate/: __init__.py  validator.py
data/: sample_callgraph.json
scripts/: lb-conversion.py
