[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callgraph-cli"
version = "0.1.0"
description = "A CLI tool for loading, validating, and querying call graphs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
callgraph = "callgraph.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["callgraph*"]
